tests/chainsaw/disallow-proc-mount/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-unmasked-procmount
spec:
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
    securityContext:
      procMount: Unmasked
