tests/chainsaw/disallow-proc-mount/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod-default-procmount
spec:
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
    securityContext:
      procMount: Default
      allowPrivilegeEscalation: false
      runAsNonRoot: true
      seccompProfile:
        type: RuntimeDefault
      capabilities:
        drop:
        - ALL
